- Update padding in gallery on mobile - Hide gallery item overlay on mobile - Update header/nav on each page - Use correct arrows in nav in project subpages on mobile

--- a/assets/css/responsive-style.css
+++ b/assets/css/responsive-style.css
@@ -29,7 +29,10 @@
 
   /* gallery layout */
   .gallery-container > .gallery-container__element {
-    width: calc(100% / 2 - 10px);
+    width: calc(100% / 2 - 7.5px);
+    margin-right: 3.75px;
+    margin-left: 3.75px;
+    margin-bottom: 7.5px;
   }
 
   .gallery-container > .gallery-container__element:nth-child(12n + 2),
@@ -71,6 +74,12 @@
 
   .main-content {
     padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  .gallery-container {
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   /* ################################
